--- a/landingassets/mainstyle.css
+++ b/landingassets/mainstyle.css
@@ -12,7 +12,7 @@ body {
   text-align: center;
   width: 100%;
   height: 100vh;
-  background: linear-gradient(to right, #FFF 0%, #FFF 50%, #008DD2 50%, #008DD2 100%), linear-gradient(to right, #F2651C 0%, #F2651C 50%, #BCC375 50%, #BCC375 100%);
+  background: linear-gradient(to right, #F2651C 0%, #088000 50%, #FFD700 50%, #008DD2 100%), linear-gradient(to right, #008DD2 0%, #F2651C 50%, #088000 50%, #FFD700 100%);
   background-size: 100% 50%;
   background-position: center top, center bottom;
   background-repeat: no-repeat;
