--- a/landingassets/mainstyle.css
+++ b/landingassets/mainstyle.css
@@ -4,16 +4,15 @@
   box-sizing: border-box;
 }
 
-body {
-  background: #fcfcfc;
+body {  
   display: flex;
   flex-direction: column;
-  min-height: 100%;
+  min-height: 100vh;
   text-align: center;
   width: 100%;
-  height: 100vh;
-  background: linear-gradient(to right, #F2651C 0%, #ffd700 50%, #FFD700 50%, #008DD2 100%), linear-gradient(to right, #F2651C 0%, #ffd700 50%, #FFD700 50%, #008DD2 100%);
-  background-size: 100% 50%;
+  /* height: 100vh; */
+  background: linear-gradient(to right, #F2651C 0%, #ffd700 50%, #FFD700 50%, #008DD2 100%);
+  background-size: 100%;
   background-position: center top, center bottom;
   background-repeat: no-repeat;
 }
@@ -29,20 +28,20 @@ body {
 
 .footer {
   background-color: white;
+  position: relative;
   bottom: 0;
-  left: 0;
-  right: 0;
-  height: 60px;
+  /* left: 0; */
+  /* right: 0; */
+  /* height: 2em; */
   width: 100vw;
-  padding-top: 1rem;
-  color: #fff;
+  /* padding-top: 1rem; */
 }
 
-@media screen and (max-width: 1279px) {
+/* @media screen and (max-width: 1279px) {
   .navbar {
     background-color: hsl(171, 100%, 41%);
   }
-}
+} */
 
 @media screen and (min-width: 1280px) {
   .navbar {
