--- a/landingassets/mainstyle.css
+++ b/landingassets/mainstyle.css
@@ -38,7 +38,15 @@ body {
   color: #fff;
 }
 .button {
-  background-color: red;
+  background-color:hsl(176, 49%, 37%);
+  font-family: Arial, Helvetica, sans-serif;
+ 
+}
+.button2 {
+  height: 40px;
+  text-align: center;
+  
+
 }
 
    
