--- a/landingassets/mainstyle.css
+++ b/landingassets/mainstyle.css
@@ -45,10 +45,14 @@ body {
 .button2 {
   height: 40px;
   text-align: center;
+  border-radius: 10%;
   
 
 }
-
+#colorchoice {
+  color: red;
+  padding-left: 16px;
+}
    
 
 @media screen and (max-width: 1279px) {
