--- a/landingassets/mainstyle.css
+++ b/landingassets/mainstyle.css
@@ -10,7 +10,7 @@ body {
   min-height: 100%;
   text-align: center;
   width: 100%;
-  /* height: 100vh; */
+  height: 100vh;
   background: linear-gradient(to right, #F2651C 0%, #ffd700 50%, #FFD700 50%, #008DD2 100%);
   background-size: 100%;
   background-position: center top, center bottom;
@@ -58,13 +58,27 @@ footer {
   height: 39px;
   text-align: center;
   border-radius: 10%;
-  background-color: hsl(176, 49%, 37%);;
+  background-color: hsl(176, 49%, 37%);;  
+}
+#citystate-btn {
+  background-color: hsl(176, 49%, 37%);;  
+}
+#colorinput {
+  background-color: hsl(176, 49%, 37%);
+  color: white;
   
-
 }
 #colorchoice {
+  border-style: solid;
+  border-width: thin;  
   color: black;
-  padding-left: 16px;
+  padding-left: 2px;
+  margin-left: 2px;
+}
+#citystate {
+  border-style: solid;
+  border-width: thin;
+  border-color: black;
 }
    
 
