--- a/landingassets/mainstyle.css
+++ b/landingassets/mainstyle.css
@@ -93,3 +93,9 @@ footer {
     background-color: rgb(255, 255, 255);
   }
 }
+
+@media screen and (max-width: 600px) {
+  .button {
+    font-size: small;
+  }
+}
